--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,15 @@
   </style>
 </head>
 <body>
+  <!-- Add this to your HTML file -->
+  <div id="menu" style="position:fixed;top:0;left:0;width:100vw;height:100vh;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,0.7);z-index:10;">
+    <div style="background:#222;padding:2em;border-radius:1em;text-align:center;">
+      <h1>MetaBlocks</h1>
+      <canvas id="previewCanvas" width="300" height="200" style="margin-bottom:1em;border-radius:0.5em;"></canvas>
+      <br>
+      <button id="startBtn">Start Game</button>
+      <button id="restartBtn">Restart</button>
+    </div>
+  </div>
 </body>
 </html>
