This is mostly working now. The menus are super janky and resetting causes the camera (or perhaps the tiles) to be in the wrong place. I also need to add some options to the menu and have it generate some levels for the player.

--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,13 @@
       <button id="restartBtn">Restart</button>
     </div>
   </div>
+
+  <div id="winScreen" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.85); color:#fff; z-index:1000; text-align:center; justify-content:center; align-items:center; flex-direction:column; font-size:2em;">
+    <div style="margin-top:20vh;">
+        <h1>CONGRATULATIONS!</h1>
+        <div id="winStats"></div>
+        <button id="menuBtn" style="font-size:1em; padding:1em 2em; margin-top:2em;">Return to Main Menu</button>
+    </div>
+</div>
 </body>
 </html>
