--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,41 @@
 <body>
   <!-- Add this to your HTML file -->
   <div id="menu" style="position:fixed;top:0;left:0;width:100vw;height:100vh;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,0.7);z-index:10;">
-    <div style="background:#222;padding:2em;border-radius:1em;text-align:center;">
+    <div style="
+      background:#222;
+      padding:2em;
+      border-radius:1em;
+      text-align:center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 400px;
+      width: 100%;
+    ">
       <h1>MetaBlocks</h1>
-      <canvas id="previewCanvas" width="300" height="200" style="margin-bottom:1em;border-radius:0.5em;"></canvas>
-      <br>
+      <div style="width:100%;">
+        <label>
+          Rows (n): <input type="range" id="sliderN" min="3" max="10" value="5">
+          <span id="labelN">5</span>
+        </label><br>
+        <label>
+          Columns (m): <input type="range" id="sliderM" min="3" max="10" value="5">
+          <span id="labelM">5</span>
+        </label><br>
+        <label>
+          Block Size (b): <input type="range" id="sliderB" min="1" max="3" value="1">
+          <span id="labelB">1</span>
+        </label><br>
+        <label>
+          Difficulty: <input type="range" id="sliderDifficulty" min="1" max="5" value="1">
+          <span id="labelDifficulty">1</span>
+        </label><br>
+        <label>
+          Level: <input type="range" id="sliderLevel" min="1" max="10" value="1">
+          <span id="labelLevel">1</span>
+        </label><br>
+      </div>
+      <canvas id="previewCanvas" width="300" height="200" style="margin: 1em 0; border-radius:0.5em; display:block;"></canvas>
       <button id="startBtn">Start Game</button>
       <button id="restartBtn">Restart</button>
     </div>
